# path-tracing-cpp

./: CMakeLists.txt  README.md
include/components/: material.cpp  material.h  primitiveshapes.cpp  primitiveshapes.h  scene.cpp  scene.h  shape.cpp  shape.h  transform3d.cpp  transform3d.h
include/export/: bmp.h
include/raytrace/: raytrace.cpp  raytrace.h
include/utils/: utils.cpp  utils.h
include/vec3/: vec3.cpp  vec3.h
src/: main.cpp
